# registration

./: .env.example  .gitignore  .gitmodules  README.md  app.py  pyproject.toml
docs/: COMPATIBILITY_REPORT.md  CORRESPONDENCES.md  GIT_WORKFLOW.md  GRADIO_DEMO.md  PIPELINE.md  README.md  REGISTRATION.md  SETUP.md  SUBMODULES.md  TROUBLESHOOTING.md  UV_ENVIRONMENT.md
examples/: config.example.json
examples/correspondences/: example_correspondences.csv  example_correspondences.json  manual_correspondences_export.example.json  manual_ct_landmarks.example.json
pipeline/: __init__.py  config.py  correspondences.py  depth_vggtomega.py  errors.py  export.py  io.py  registration.py  repo_paths.py  segmentation_medicalsam3.py  visualization.py
scripts/: check_repo_layout.py  dry_run.py
