[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "surgical-registration-prototype"
version = "0.1.0"
description = "Research prototype for 2D surgical image to 3D mesh registration with initial pose and deformable refinement."
readme = "docs/README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "Pillow",
  "opencv-python",
  "trimesh",
  "gradio",
  "pycocotools>=2.0.11",
  "psutil>=7.2.2",
  "scikit-learn>=1.7.2",
  "dotenv>=0.9.9",
]

[project.optional-dependencies]
models = [
  "torch",
]
dev = [
  "pytest",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["pipeline*"]

